buildscript {
    ext {
        es_version = System.getProperty("es.version", "7.8.0")
        es_group = "org.elasticsearch"
        distribution = 'oss-zip'
    }

    repositories {
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
        jcenter()
    }

    dependencies {
        classpath "${es_group}.gradle:build-tools:${es_version}"
    }
}

plugins {
    id 'java'
}
version = '0.1-alpha'
group = 'com.amazon'
sourceCompatibility = '1.8'

apply plugin: 'elasticsearch.testclusters'
apply plugin: 'elasticsearch.build'

// To pass elasticsearch plugin check
ext {
    licenseFile = rootProject.file('LICENSE.TXT')
    noticeFile = rootProject.file('NOTICE.TXT')
}

repositories {
    mavenCentral()
}

dependencies {
    // ES sink
    compile "org.elasticsearch:elasticsearch:${es_version}"
    compile "org.elasticsearch.client:elasticsearch-rest-client:${es_version}"

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.1'
    implementation 'org.reflections:reflections:0.9.11'
    implementation 'com.google.guava:guava:29.0-jre'
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.apache.bval:bval-jsr:2.0.0'
    implementation 'org.apache.bval:bval-extras:2.0.4'
    testImplementation 'junit:junit:4.13'
}

// Workaround for Werror
compileJava.options.warnings = false

// Resolve dependency conflict between ES sink and main project
configurations.all {
    resolutionStrategy {
        force 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.1'
        force 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
        force 'com.fasterxml.jackson.core:jackson-core:2.11.1'
        force 'com.google.guava:guava:29.0-jre'
        force 'org.apache.bval:bval-jsr:2.0.4'
    }
}

jar {
    manifest {
        attributes('Implementation-Title': project.name,
                'Implementation-Version': project.version)
    }
}

forbiddenApis.ignoreFailures = true
checkstyleMain.ignoreFailures = true
checkstyleTest.ignoreFailures = true
testingConventions.enabled = false
licenseHeaders.enabled = false
dependencyLicenses.enabled = false
thirdPartyAudit.enabled = false
validateNebulaPom.enabled = false